--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.5",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.11",
@@ -26,8 +31,10 @@
     "ky": "^1.14.0",
     "lucide-react": "^0.555.0",
     "next": "15.5.2",
+    "openai": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
